--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,6 +13,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #01013d;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 main {
   width: 100%;
@@ -47,11 +48,13 @@ header {
   font-size: 25px;
   background-color: #01013d;
   opacity: 90%;
+  z-index: 1;
   transition: background-color 0.3s ease-in-out;
 }
 .navbar-scrolled {
   background-color: transparent;
 }
+
 .nav-menu {
   display: flex;
   justify-content: space-between;
@@ -92,48 +95,31 @@ a {
   transition: all 0.3s ease-in-out;
   background-color: #ffffff;
 }
-
-.home-button {
-  transition: 300ms;
-  font-size: 1.5rem;
-}
-.home-button:hover {
-  color: #ffffff;
-  border: solid 2px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 20px;
-  transition: 300ms;
-}
-.projects-button {
-  transition: 300ms;
-  font-size: 1.5rem;
-}
-.projects-button:hover {
-  color: #ffffff;
-  border: solid 2px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 20px;
-  transition: 300ms;
-}
+.home-button,
+.projects-button,
 .about-button {
   transition: 300ms;
   font-size: 1.5rem;
+  position: relative;
 }
-.about-button:hover {
-  color: #ffffff;
-  border: solid 2px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 20px;
-  transition: 300ms;
+
+.home-button::after,
+.projects-button::after,
+.about-button::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 3px;
+  background-color: #ffffff;
+  transition: width 0.3s ease;
+}
+
+.home-button:hover::after,
+.projects-button:hover::after,
+.about-button:hover::after {
+  width: 100%;
 }
 
 h1 {
@@ -276,11 +262,10 @@ h3 {
   font-size: 1.2rem;
   margin-top: 50px;
   margin-bottom: 20px;
-  transition: 300ms;
+  transition: 0.3s ease;
 }
 .github-btn:hover {
   color: #2e47df;
-  transition: 300ms;
 }
 .website-btn {
   color: #ffffff;
@@ -292,11 +277,10 @@ h3 {
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 30px;
-  transition: 300ms;
+  transition: 0.3s ease;
 }
 .website-btn:hover {
   background-color: #01013d;
-  transition: 300ms;
 }
 
 .about-section {
@@ -337,11 +321,10 @@ h5 {
   font-size: 1.2rem;
   margin-top: 50px;
   margin-bottom: 20px;
-  transition: 300ms;
+  transition: 0.3s ease;
 }
 .mygithub-btn:hover {
   color: #2e47df;
-  transition: 300ms;
 }
 .contact-btn {
   color: #ffffff;
@@ -353,12 +336,11 @@ h5 {
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 30px;
-  transition: 300ms;
+  transition: 0.3s ease;
   margin-bottom: 30px;
 }
 .contact-btn:hover {
   background-color: #01013d;
-  transition: 300ms;
 }
 
 footer {
@@ -446,5 +428,48 @@ h6 {
     font-weight: normal;
     padding-bottom: 20px;
     padding-top: 20px;
+  }
+  .rainydays-section {
+    background-color: #ffffff;
+    display: flex;
+    width: 90%;
+    flex-direction: row;
+    justify-content: center;
+    max-width: 1500px;
+    gap: 4rem;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    border-radius: 30px;
+  }
+  .semesterproject-section {
+    background-color: #ffffff;
+    display: flex;
+    width: 90%;
+    flex-direction: row;
+    justify-content: center;
+    max-width: 1500px;
+    gap: 4rem;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    border-radius: 30px;
+  }
+
+  .exam-section {
+    background-color: #ffffff;
+    display: flex;
+    width: 90%;
+    flex-direction: row;
+    justify-content: center;
+    max-width: 1500px;
+    gap: 4rem;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    border-radius: 30px;
   }
 }
