--- a/CSS/index.css
+++ b/CSS/index.css
@@ -24,7 +24,7 @@ header {
   width: 100%;
   height: 100vh;
   display: grid;
-  background-image: url(/Images/Skjermbilde\ 2023-06-04\ kl.\ 19.21.52.png);
+  background-image: url(/Images/Skjermbilde\ 2023-06-04\ kl.\ 19.21.52-min.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
