--- a/CSS/index.css
+++ b/CSS/index.css
@@ -436,10 +436,12 @@ h6 {
     z-index: 1;
   }
   .sander-pic {
-    width: 150px;
+    width: 170px;
   }
   h1 {
     font-size: 2.4rem;
+    line-height: 4rem;
+    padding-top: 20px;
   }
   h2 {
     font-size: 2.5rem;
