--- a/CSS/index.css
+++ b/CSS/index.css
@@ -274,6 +274,7 @@ h6 {
   margin: 0 auto;
   text-decoration: underline;
   font-size: 1.2rem;
+  font-weight: 400;
   margin-top: 40px;
   margin-bottom: 20px;
   transition: color 0.3s ease, transform 0.3s ease !important;
@@ -289,6 +290,7 @@ h6 {
   margin: 0 auto;
   background-color: #2e47df;
   font-size: 1.2rem;
+  font-weight: 400;
   padding-left: 60px;
   padding-right: 60px;
   padding-top: 9px;
@@ -353,6 +355,7 @@ h6 {
   margin: 0 auto;
   background-color: #2e47df;
   font-size: 1.2rem;
+  font-weight: 400;
   padding-left: 70px;
   padding-right: 70px;
   padding-top: 12px;
